[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Dialog/DialogBacking.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Inventory/inventory_selectcursor1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Font/GOLEMNOMICON_UI/Default_UI.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/UI/UIConfirmationWindow.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 24, 24 )

[node name="UIConfirmationWindow" type="Control"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.526
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -66.5
margin_right = -118.48
margin_bottom = -66.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_right = 134.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_left = 14.0
margin_top = 13.0
margin_right = 120.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 3 )
text = "Are You Sure?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 106.0
margin_bottom = 42.0
alignment = 1

[node name="Choice1" type="TextureRect" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 13.0
margin_bottom = 23.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Yes" type="ToolButton" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 17.0
margin_right = 54.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice2" type="TextureRect" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 58.0
margin_right = 71.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="ToolButton" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 106.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_No_pressed"]
